progress-bar added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   </head>
 
   <body>
+    <div>
+      <h1>Likya Yolu 92 km / 486.89 km</h1>
+
+      <div id="myProgress">
+        <div id="myBar">18.9%</div>
+      </div>
+    </div>
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
       <symbol id="icon-clear" viewBox="0 0 24 24">
         <path
