--- a/index.html
+++ b/index.html
@@ -22,11 +22,53 @@
   <div id="myProgress">
     <h2 class="header-title">Likya Yolu</h2>
     <div class="progress-bar progress-bar-success" role="progressbar" style="width:19%">
-       92 KM
+      92 KM
     </div>
     <div class="progress-bar progress-bar-danger" role="progressbar" style="width:81%">
       Kalan 395 KM
     </div>
+
+  </div>
+  <div class="">
+    <div class="stepper-wrapper">
+      <div class="stepper-item completed">
+        <div class="step-counter"></div>
+        <div class="step-name">Ovacık</div>
+      </div>
+      <div class="stepper-item completed">
+        <div class="step-counter">1</div>
+        <div class="step-name">Faralya</div>
+      </div>
+      <div class="stepper-item completed">
+        <div class="step-counter">2</div>
+        <div class="step-name">Kabak</div>
+      </div>
+      <div class="stepper-item completed">
+        <div class="step-counter">3</div>
+        <div class="step-name">Alınca</div>
+      </div>
+    </div>
+    <div class="stepper-wrapper1">
+      <div class="stepper-item1 completed1">
+        <div class="step-counter1"></div>
+        <div class="step-name1">Alınca</div>
+      </div>
+      <div class="stepper-item1 completed1">
+        <div class="step-counter1">4</div>
+        <div class="step-name1">Bel</div>
+      </div>
+      <div class="stepper-item1 completed1">
+        <div class="step-counter1">5</div>
+        <div class="step-name1">Gavurağılı</div>
+      </div>
+      <div class="stepper-item1 completed1">
+        <div class="step-counter1">6</div>
+        <div class="step-name1">Karadere</div>
+      </div>
+      <div class="stepper-item1 completed1">
+        <div class="step-counter1">7</div>
+        <div class="step-name1">Kumluova</div>
+      </div>
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
     <symbol id="icon-clear" viewBox="0 0 24 24">
